# rust-social-media

./: .env  .gitignore  Cargo.toml  docker-compose.yaml
migrations/2024-02-01-190857_create_users/: up.sql
migrations/2024-02-09-151038_add_posts/: down.sql  up.sql
src/: main.rs
src/auth/: jwt.rs  middleware.rs
src/database/: connection_pool.rs  mod.rs  schema.rs
src/database/models/: posts.rs  users.rs
src/database/queries/: posts.rs
src/logging/: init.rs  mod.rs
src/resources/: healthcheck.rs  mod.rs  posts.rs  users.rs
src/responses/: healthcheck.rs  mod.rs  user.rs
src/routes/: mod.rs
src/schemas/: login_schema.rs  mod.rs  new_user.rs
