[package]
name = "rust-social-media"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.1.0", features = ["postgres", "r2d2"] }
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
actix-web = "4"
env_logger = "0.11.1"
log = "0.4.20"