[package]
name = "rust-social-media"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.1.0", features = ["postgres", "r2d2"] }
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix-web = "4"
env_logger = "0.11.1"
log = "0.4.20"
slog = "2.7.0"
slog-term = "2.9.0"
slog-async = "2.7.0"
elasticsearch = "8.5.0-alpha.1"